tests/invalid/purity/.cvsignore
*.d
*.date
*.date0
*.date3
*.dep
*.err_res*
*.int
*.int0
*.int2
*.int3
*.dv
*.c
.allres
CLEAN
FAILED_TESTS
runtests.errs
